--- a/index.html
+++ b/index.html
@@ -82,104 +82,92 @@
     </script>
 </body>
 
-<section class="car-offers">
-    <p class="sub-title">WHAT WE OFFER</p>
-    <h2 class="section-title">Choose Your Car</h2>
-    
-    <div class="container-grid">
-        <div class="car-card">
-            <div class="car-image">
-                <img src="./images/car-3.jpg" alt="Mercedes Grand Sedan">
-                <!-- <div class="price-tag">
-                    <span class="amount">₹25</span>
-                    <span class="per-day">FROM /DAY</span>
-                </div> -->
-            </div>
-            <div class="car-info">
-                <h4>Mercedes Grand Sedan</h4>
-                <p class="brand">AUDI</p>
-                <div class="card-actions">
-                    <a href="#" class="btn-outline" onclick="openBookingModal(event, 'mercedes')">Book now</a>
-                    <a href="#" class="btn-outline">Details</a>
+<section class="car-offers dark-section">
+    <div class="luxury-container">
+        <div class="section-heading dark-heading">
+            <p class="sub-title">WHAT WE OFFER</p>
+            <h2 class="section-title">Choose Your Car</h2>
+        </div>
+        
+        <div class="container-grid dark-grid">
+            <div class="car-card dark-card">
+                <div class="car-image">
+                    <img src="./images/car-3.jpg" alt="Mercedes Grand Sedan">
+                </div>
+                <div class="car-info dark-car-info">
+                    <h4>Mercedes Grand Sedan</h4>
+                    <p class="brand">AUDI</p>
+                    <div class="card-actions">
+                        <a href="#" class="btn-outline dark-btn" onclick="openBookingModal(event, 'mercedes')">Book now</a>
+                        <a href="#" class="btn-outline dark-btn">Details</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="car-card">
-            <div class="car-image">
-                <img src="./images/car-4.jpg" alt="Range Rover">
-                <!-- <div class="price-tag">
-                    <span class="amount">₹25</span>
-                    <span class="per-day">FROM /DAY</span>
-                </div> -->
-            </div>
-            <div class="car-info">
-                <h4>Mercedes Grand Sedan</h4>
-                <p class="brand">FORD</p>
-                <div class="card-actions">
-                    <a href="#" class="btn-outline" onclick="openBookingModal(event, 'range-rover')">Book now</a>
-                    <a href="#" class="btn-outline">Details</a>
+            <div class="car-card dark-card">
+                <div class="car-image">
+                    <img src="./images/car-4.jpg" alt="Range Rover">
+                </div>
+                <div class="car-info dark-car-info">
+                    <h4>Mercedes Grand Sedan</h4>
+                    <p class="brand">FORD</p>
+                    <div class="card-actions">
+                        <a href="#" class="btn-outline dark-btn" onclick="openBookingModal(event, 'range-rover')">Book now</a>
+                        <a href="#" class="btn-outline dark-btn">Details</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="car-card">
-            <div class="car-image">
-                <img src="./images/car-5.jpg" alt="Audi Blue">
-                <!-- <div class="price-tag">
-                    <span class="amount">₹25</span>
-                    <span class="per-day">FROM /DAY</span>
-                </div> -->
-            </div>
-            <div class="car-info">
-                <h4>Mercedes Grand Sedan</h4>
-                <p class="brand">CHEVROLET</p>
-                <div class="card-actions">
-                    <a href="#" class="btn-outline" onclick="openBookingModal(event, 'audi')">Book now</a>
-                    <a href="#" class="btn-outline">Details</a>
+            <div class="car-card dark-card">
+                <div class="car-image">
+                    <img src="./images/car-5.jpg" alt="Audi Blue">
+                </div>
+                <div class="car-info dark-car-info">
+                    <h4>Mercedes Grand Sedan</h4>
+                    <p class="brand">CHEVROLET</p>
+                    <div class="card-actions">
+                        <a href="#" class="btn-outline dark-btn" onclick="openBookingModal(event, 'audi')">Book now</a>
+                        <a href="#" class="btn-outline dark-btn">Details</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="car-card">
-            <div class="car-image">
-                <img src="./images/car-6.jpg" alt="Mustang">
-                <!-- <div class="price-tag">
-                    <span class="amount">₹25</span>
-                    <span class="per-day">FROM /DAY</span>
-                </div> -->
-            </div>
-            <div class="car-info">
-                <h4>Mercedes Grand Sedan</h4>
-                <p class="brand">MERCEDES</p>
-                <div class="card-actions">
-                    <a href="#" class="btn-outline" onclick="openBookingModal(event, 'mustang')">Book now</a>
-                    <a href="#" class="btn-outline">Details</a>
+            <div class="car-card dark-card">
+                <div class="car-image">
+                    <img src="./images/car-6.jpg" alt="Mustang">
+                </div>
+                <div class="car-info dark-car-info">
+                    <h4>Mercedes Grand Sedan</h4>
+                    <p class="brand">MERCEDES</p>
+                    <div class="card-actions">
+                        <a href="#" class="btn-outline dark-btn" onclick="openBookingModal(event, 'mustang')">Book now</a>
+                        <a href="#" class="btn-outline dark-btn">Details</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="section__container about__container" id="about">
+<section class="section__container about__container dark-section" id="about">
       <div class="about__image">
         <img src="images/cars/about.png" alt="about" />
       </div>
-      <div class="about__content">
+      <div class="about__content dark-content">
         <h3 class="section__subheader">CONVENIENT INTERACTION</h3>
-        <h2 class="section__header">Modern App</h2>
-        <p class="section__description">
+        <h2 class="section__header dark-header">Modern App</h2>
+        <p class="section__description dark-text">
           At Premium Car Rental, we redefine the car rental experience in New
           York with our unparalleled commitment to quality and luxury. Whether
           you're exploring the city for business or leisure, Our Cars of
           high-end vehicles ensures a sophisticated and comfortable ride.
         </p>
-        <p class="section__description">
+        <p class="section__description dark-text">
           With easy booking options, competitive pricing, and dedicated customer
           support, we strive to make every journey effortless and enjoyable
         </p>
         <div class="about__btn">
-          <button class="btn">
+          <button class="btn" onclick="openBookingModal(event, 'Download App')">
             <span><i class="ri-apple-fill"></i></span>
             Download App
           </button>
@@ -187,33 +175,35 @@
       </div>
     </section>
 
-    <section class="fleet__container" id="car">
-      <h3 class="section__subheader">ONLY THE BEST CARS</h3>
-      <h2 class="section__header">Our Vehicle Fleet</h2>
-      <p class="section__description">
-        Explore our exclusive collection of luxury vehicles, designed to offer
-        unmatched comfort, style, and performance. From elegant sedans to
-        powerful SUVs, Our Cars is perfect for every occasion, ensuring a
-        premium driving experience in New York.
-      </p>
-      <div class="fleet__wrapper-1">
-        <div class="fleet__images">
-          <img src="images/cars/fleet-1.jpg" alt="fleet" />
-          <img src="images/cars/fleet-2.jpg" alt="fleet" />
-          <img src="images/cars/fleet-3.jpg" alt="fleet" />
-          <img src="images/cars/fleet-4.jpg" alt="fleet" />
-          <img src="images/cars/fleet-5.jpg" alt="fleet" />
+    <section class="fleet__container dark-section" id="car">
+      <div class="luxury-container">
+        <!-- <h3 class="section__subheader">ONLY THE BEST CARS</h3> -->
+        <h2 class="section__header dark-header">Our Vehicle Fleet</h2>
+        <p class="section__description dark-text">
+          Explore our exclusive collection of luxury vehicles, designed to offer
+          unmatched comfort, style, and performance. From elegant sedans to
+          powerful SUVs, Our Cars is perfect for every occasion, ensuring a
+          premium driving experience in New York.
+        </p>
+        <div class="fleet__wrapper-1">
+          <div class="fleet__images">
+            <img src="images/cars/fleet-1.jpg" alt="fleet" />
+            <img src="images/cars/fleet-2.jpg" alt="fleet" />
+            <img src="images/cars/fleet-3.jpg" alt="fleet" />
+            <img src="images/cars/fleet-4.jpg" alt="fleet" />
+            <img src="images/cars/fleet-5.jpg" alt="fleet" />
+          </div>
         </div>
-      </div>
-      <div class="fleet__wrapper-2">
-        <div class="fleet__images">
-          <img src="images/cars/fleet-6.jpg" alt="fleet" />
-          <img src="images/cars/fleet-7.jpg" alt="fleet" />
-          <img src="images/cars/fleet-8.jpg" alt="fleet" />
-          <img src="images/cars/fleet-9.jpg" alt="fleet" />
-          <img src="images/cars/fleet-10.jpg" alt="fleet" />
-          <img src="images/cars/fleet-11.jpg" alt="fleet" />
-          <img src="images/cars/fleet-12.jpg" alt="fleet" />
+        <div class="fleet__wrapper-2">
+          <div class="fleet__images">
+            <img src="images/cars/fleet-6.jpg" alt="fleet" />
+            <img src="images/cars/fleet-7.jpg" alt="fleet" />
+            <img src="images/cars/fleet-8.jpg" alt="fleet" />
+            <img src="images/cars/fleet-9.jpg" alt="fleet" />
+            <img src="images/cars/fleet-10.jpg" alt="fleet" />
+            <img src="images/cars/fleet-11.jpg" alt="fleet" />
+            <img src="images/cars/fleet-12.jpg" alt="fleet" />
+          </div>
         </div>
       </div>
     </section>
