--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,17 @@
             <div class="map-header">
               <h3>Find Us on the Map</h3>
             </div>
-        		<div id="map" class="professional-map"></div>
+        		<iframe
+              title="RouteX Location - Gaya, Bihar"
+              src="https://www.google.com/maps?q=24.7935,84.9823&hl=en&z=15&output=embed"
+              width="100%"
+              height="500"
+              frameborder="0"
+              style="border: 0; border-radius: 8px;"
+              allowfullscreen=""
+              aria-hidden="false"
+              tabindex="0"
+            ></iframe>
         	</div>
         </div>
       </div>
@@ -330,8 +340,6 @@
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
   </body>
