Fixed all the cards of every pages

--- a/luxury.html
+++ b/luxury.html
@@ -372,7 +372,7 @@
                 <!-- Ferrari F8 Tributo -->
                 <div class="luxury-car-card">
                     <div class="car-image-wrapper">
-                        <img src="images/car-8.jpg" alt="Ferrari F8 Tributo" style="background: linear-gradient(135deg, #c41e3a 0%, #8b0000 100%); display: flex; align-items: center; justify-content: center; font-size: 3rem;">
+                        <img src="images/cars/tributo.jpg" alt="Ferrari F8 Tributo" style="background: linear-gradient(135deg, #c41e3a 0%, #8b0000 100%); display: flex; align-items: center; justify-content: center; font-size: 3rem;">
                         <span class="car-badge" style="background: #c41e3a;">FERRARI</span>
                         <!-- <div class="car-price-tag">₹2,200/day</div> -->
                     </div>
@@ -861,13 +861,14 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul class="footer-links">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/car.html">Our Cars</a></li>
-                    <li><a href="/pricing.html">Pricing</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="our-cars.html">Our Cars</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </div>
+
 
             <!-- Information -->
             <div class="footer-section">
