--- a/pricing.html
+++ b/pricing.html
@@ -450,13 +450,14 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul class="footer-links">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/car.html">Our Cars</a></li>
-                    <li><a href="/pricing.html">Pricing</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="our-cars.html">Our Cars</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </div>
+
 
             <!-- Information -->
             <div class="footer-section">
