Fixed Rubicon card

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <div class="car-card dark-card">
                     <div class="car-image-carousel">
                         <div class="car-image">
-                            <img src="./images/cars/Rubicon.jpg" alt="Rubicon">
+                            <img src="./images/cars/rubicon.jpg" alt="Rubicon">
                         </div>
                         <div class="car-image">
                             <img src="./images/cars/rubicon1.jpg" alt="Rubicon">
