Added detail page of Tarzan and Omni Van

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <div class="card-actions">
                             <a href="#" class="btn-outline dark-btn" onclick="openBookingModal(event, 'thar')">Book
                                 now</a>
-                            <a href="#" class="btn-outline dark-btn">Details</a>
+                            <a href="tarzan-details.html" class="btn-outline dark-btn">Details</a>
                         </div>
                     </div>
                 </div>
@@ -438,7 +438,7 @@
                         <div class="card-actions">
                             <a href="#" class="btn-outline dark-btn" onclick="openBookingModal(event, 'omni')">Book
                                 now</a>
-                            <a href="#" class="btn-outline dark-btn">Details</a>
+                            <a href="omni-details.html" class="btn-outline dark-btn">Details</a>
                         </div>
                     </div>
                 </div>
