Replaced details youtube videos

--- a/tarzan-details.html
+++ b/tarzan-details.html
@@ -643,7 +643,7 @@
           <iframe 
             width="100%" 
             height="600" 
-            src="https://www.youtube.com/embed/AwaS2wRGRE8" 
+            src="https://www.youtube.com/embed/hUfTp9jNbvA?si=CHMDEueotyx06xmt" 
             title="Tarzan The Wonder Car - Official Video" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
